--- a/DSI.html
+++ b/DSI.html
@@ -73,7 +73,7 @@ html {
 		<p> 
 	<nav>
 	<ul>
-     <a href="bio.html">Bio</a>
+     <a href="index.html">Bio</a>
     <a href="clubs.html">Clubs</a>
     <a href="DSI.html">DSI</a>
     <a href="join.html">Join</a>
