--- a/Thankyou.html
+++ b/Thankyou.html
@@ -51,7 +51,7 @@ body {
    <p> 
 	<nav>
 	<ul>
-   <a href="bio.html">Bio</a>
+   <a href="index.html">Bio</a>
     <a href="clubs.html">Clubs</a>
     <a href="DSI.html">DSI</a>
     <a href="join.html">Join</a>
