--- a/clubs.html
+++ b/clubs.html
@@ -46,7 +46,7 @@ p {
 <body>
 <nav>
 	<ul>
-    <a href="bio.html">Bio</a>
+    <a href="index.html">Bio</a>
     <a href="clubs.html">Clubs</a>
     <a href="DSI.html">DSI</a>
     <a href="join.html">Join</a>
