--- a/join.html
+++ b/join.html
@@ -60,7 +60,7 @@ td { text-align:center;
   <p> 
 	<nav>
 	<ul>
-    <a href="bio.html">Bio</a>
+    <a href="index.html">Bio</a>
     <a href="clubs.html">Clubs</a>
     <a href="DSI.html">DSI</a>
     <a href="join.html">Join</a>
